Fix one crash in the sshmanager plugin

BUG: 439551